samples/_failures_safe/1761502284_ffcb8e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7e938ea4.c:186: error: expected ‘;’, ‘,’ or ‘)’ at end of input
